--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
       <div class="container-fluid header "><!-- header section start -->
              <div class="row">
-                    <div class="col-lg-3 col-md-3 col-sm-12logoimg">
+                    <div class="col-lg-3 col-md-3 col-sm-12 logoimg">
                         <img src="images/logo.png" alt="">
                     </div>
                     <div class="col-9">
@@ -55,7 +55,7 @@
                         <br><br><br><br><br><br>
                           <p>চট্টগ্রামে কারাগার থেকে বন্দি উধাওয়ের ঘটনায় ২ জন বরখাস্ত, জেলার প্রত্যাহার</p>
                     </div>
-                    <div class="col-5 secondpart2nd">
+                    <div class="col-lg-5 col-md-12 col-sm-12 secondpart2nd">
                         
                         <ul>
                                     <li><a href="#">ঝিনাইদহে বিদ্যুৎস্পৃষ্টে স্কুলছাত্রীর মৃত্যু</a></li>
@@ -70,9 +70,15 @@
                     </div>
                 </div>
             </div><!-- 2nd section end -->
-
+                    <div class="container">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="row">
+                                <img src="images/bkash.gif" alt="">
+                            </div>
+                        </div>
+                    </div>
             <!-- 3rd section start -->
-            <div class="container thirdpart pt-4 mt-4">
+            <div class="container thirdpart pt-3 mt-3">
                 <div class="row">
                       <div class="col-lg-3 col-md-3 col-sm-12 imgsingle">
                           <a href="#"><img src="images/1.jpg" alt=""></a>
