--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
                     </div>
                 </div>
             </div><!-- 2nd section end -->
-                    <div class="container">
+            <!-- add section start -->
+                    <div class="container pt-3 mt-3">
                         <div class="col-lg-12 col-md-12 col-sm-12">
                             <div class="row">
                                 <img src="images/bkash.gif" alt="">
                             </div>
                         </div>
-                    </div>
+                    </div> <!-- add section end -->
             <!-- 3rd section start -->
             <div class="container thirdpart pt-3 mt-3">
                 <div class="row">
